.kube/manifest-prod.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP_NAME}-backend
  labels:
    backstage.io/kubernetes-id: ${APP_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APP_NAME}
      component: backend
  template:
    metadata:
      labels:
        app: ${APP_NAME}
        component: backend
        backstage.io/kubernetes-id: ${APP_NAME}
    spec:
      imagePullSecrets:
        - name: ${IMAGE_PULL_SECRET}
      containers:
        - name: ${APP_NAME}
          image: ${BACKEND_IMAGE_NAME}
          ports:
            - containerPort: 7007
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 2000m
              memory: 1024Mi
            requests:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: github-app-credentials
              mountPath: /app/github-app-credentials.yaml
              subPath: github-app-credentials.yaml
            - name: app-config
              mountPath: /app/app-config.production.yaml
              subPath: app-config.production.yaml
      volumes:
        - name: github-app-credentials
          secret:
            secretName: ${APP_NAME}-backend-github-app-credentials
        - name: app-config
          configMap:
            name: ${APP_NAME}-app-config

---
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}-backend-svc
  labels:
    backstage.io/kubernetes-id: ${APP_NAME}
spec:
  ports:
    - port: 80
      targetPort: 7007
  selector:
    app: ${APP_NAME}
    component: backend
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP_NAME}-frontend
  labels:
    backstage.io/kubernetes-id: ${APP_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APP_NAME}
      component: frontend
  template:
    metadata:
      labels:
        app: ${APP_NAME}
        component: frontend
        backstage.io/kubernetes-id: ${APP_NAME}
    spec:
      imagePullSecrets:
        - name: ${IMAGE_PULL_SECRET}
      containers:
        - name: ${APP_NAME}-frontend
          image: ${FRONTEND_IMAGE_NAME}
          ports:
            - containerPort: 80
          imagePullPolicy: Always
          resources:
            limits:
              memory: 256Mi
            requests:
              memory: 128Mi
          volumeMounts:
            - name: app-config
              mountPath: /usr/share/nginx/html/static/app-config.production.yaml
              subPath: app-config.production.yaml
      volumes:
        - name: app-config
          configMap:
            name: ${APP_NAME}-app-config

---
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}-frontend-svc
  labels:
    backstage.io/kubernetes-id: ${APP_NAME}
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: ${APP_NAME}
    component: frontend
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APP_NAME}-ingress
  annotations:
    kubernetes.io/ingress.class: nginx-internal
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'    
  labels:
    backstage.io/kubernetes-id: ${APP_NAME}
spec:
  tls:
    - hosts:
        - ${DOMAIN_NAME}
    - hosts:
        - developer.mckesson.com
      secretName: ingress-mck-tls
  rules:
    - host: ${DOMAIN_NAME}
      http:
        paths:
          - path: /
            backend:
              service:
                name: ${APP_NAME}-frontend-svc
                port:
                  number: 80
            pathType: ImplementationSpecific
          - path: /api
            backend:
              service:
                name: ${APP_NAME}-backend-svc
                port:
                  number: 80
            pathType: Prefix
    - host: developer.mckesson.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: ${APP_NAME}-frontend-svc
                port:
                  number: 80
            pathType: ImplementationSpecific
          - path: /api
            backend:
              service:
                name: ${APP_NAME}-backend-svc
                port:
                  number: 80
            pathType: Prefix
